@@ -3,3 +3,5 @@
 [infopack]
 infopackdir = %(datadir)s/infopacks
 
+[log]
+logfile = %(datadir)s/logs/pybot.log
